@@ -260,7 +260,7 @@ class EMRJobRunner(MRJobRunner):
         :type hadoop_streaming_jar_on_emr: str
         :param hadoop_streaming_jar_on_emr: Like *hadoop_streaming_jar*, except that it points to a path on the EMR instance, rather than to a local file or one on S3. Rarely necessary to set this by hand.
         :type hadoop_version: str
-        :param hadoop_version: Set the version of Hadoop to use on EMR. Currently can be ``'0.18'`` or ``'0.20'``. Default is ``'0.18'``, but will change to ``'0.20'`` (EMR's default) in v0.3.0 of :py:mod:`mrjob`.
+        :param hadoop_version: Set the version of Hadoop to use on EMR. EMR currently accepts ``'0.18'`` or ``'0.20'``; default is ``'0.20'``.
         :type num_ec2_instances: int
         :param num_ec2_instances: number of instances to start up. Default is ``1``.
         :type s3_endpoint: str
@@ -398,7 +398,7 @@ class EMRJobRunner(MRJobRunner):
             'ec2_slave_instance_type': 'm1.small',
             'hadoop_streaming_jar_on_emr':
                 '/home/hadoop/contrib/streaming/hadoop-streaming.jar',
-            'hadoop_version': '0.18',
+            'hadoop_version': '0.20',
             'num_ec2_instances': 1,
             's3_sync_wait_time': 5.0,
             'ssh_bin': ['ssh'],
